[package]
name = "bevy-minesweeper"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
serde = "1.0"
rand = "0.8"
colored = "2.0"
bevy-inspector-egui = { version = "0.12.1", optional = true }
